--- a/client/index.html
+++ b/client/index.html
@@ -108,7 +108,7 @@ body {
         <div class="menu-links">
             <a class="menu" href="/">Local Timeline</a>
             <a class="menu" href="https://client.164.one/api/logout" id="logoutLink" style="display: none;">ログアウト</a>
-            <a class="menu" href="https://client.164.one/api/login">ログイン</a>
+            <a class="menu" href="https://client.164.one/api/login" id="loginlink">ログイン</a>
         </div>
     </div>
     
